@@ -1,14 +1,14 @@
 Package: kknn
 Title: Weighted k-Nearest Neighbors
-Version: 1.2-3
-Date: 2013-12-16
+Version: 1.2-4
+Date: 2014-02-11
 Author: Klaus Schliep & Klaus Hechenbichler
 Description: Weighted k-Nearest Neighbors Classification, Regression and Clustering
 Maintainer: Klaus Schliep <klaus.schliep@gmail.com>
 Depends: R (>= 2.10)
 Imports: igraph (>= 0.6), Matrix, stats
 License: GPL (>= 2)
-Packaged: 2013-12-16 11:45:57 UTC; klaus
+Packaged: 2014-02-11 13:36:47 UTC; klaus
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2013-12-16 12:58:53
+Date/Publication: 2014-02-11 15:23:30
